Fix `--blue` to be a _smidge_ darker (better contrast on `--black`) (#8745)

--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/source/css/extracted.css
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/source/css/extracted.css
@@ -34,7 +34,7 @@
 	--blue-darker: #002d70;
 	--blue-dark: #0041a3;
 	--blue-static: #0150c6;
-	--blue: #0050c7;
+	--blue: #0050db;
 	--blue-text: rgba(0, 80, 199, .999);
 	--blue-bg: rgba(0, 0, 0, .998);
 	--blue-hover: #0056d6;
